<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">农业监测预警</string>
    <string name="enter">开始浏览</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="slogan">中国农业科学院农业信息研究所</string>
    <string name="team">农业监测预警团队</string>
    <string name="exit">退出</string>
    <string name="index">首页</string>
    <string name="search">查询</string>
    <string name="price">报价</string>
    <string name="me">我的</string>
    <string name="other">其他</string>
    <string name="action_notifications">通知</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="head_image">头像</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_html">http://blog.idejie.com</string>
    <string name="base_url">http://blog.idejie.com</string>
    <string name="find">搜索</string>
    <string name="yaowen">要闻</string>
    <string name="tag">标签</string>
    <string name="pinzhong">品种</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">手机号无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码或手机号不正确</string>
    <string name="error_field_required">请填写</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">快速注册</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_back_up">找回密码</string>
    <string name="title_activity_verify">找回密码</string>
    <string name="title_activity_modify_psword">找回密码</string>
    <string name="title_activity_modify_success">找回密码</string>
    <string name="star_placeholder">*</string>
    <string name="zan">%d赞</string>
    <string name="comment">%d评</string>

    <!--   http://111.203.20.153:3001/api-->
    <string name="mh_base_url">http://111.203.20.153:3001/api</string>
    <string name="qiniu_token">http://111.203.20.153:3001/newstoken</string>

    <string name="search_placeholder">请输入关键字</string>
    <string name="logout_txt">退 出</string>
    <string name="login_logout_txt">登录/注册</string>
    <string name="settings">设置</string>
    <string name="nickname">昵称</string>
    <string name="my_prices">我的报价</string>
    <string name="my_info">我的</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="confirm">确 认</string>
    <string name="confirm_pwd">请再次输入密码</string>
    <string name="new_pwd">请输入新密码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="find_pwd">找回密码</string>
    <string name="my_follow">我的关注</string>
    <string name="no_data">没有数据</string>
    <string name="click_reload">点我重新加载</string>
    <string name="login">登陆</string>
    <string name="register">手机快速注册</string>
    <string name="input_nickname">请输入您的新昵称</string>
    <string name="update_pwd">修改密码</string>
    <string name="old_pwd">原来的密码</string>
    <string name="my_comments">我的评论</string>
    <string name="my_price">我的报价</string>
    <string name="news_comments">新闻评论</string>
    <string name="comment_txt">我来评几句...</string>
    <string name="no_related_data">无相关数据</string>
    <string name="my_setting">我的设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="register_txt">注册</string>
    <string name="input_pwd">请输入密码</string>
    <string name="type_txt">品种.</string>
    <string name="province_city">省市</string>
    <string name="region_txt">地区.</string>
    <string name="check_tendency">查看走势</string>
    <string name="del_price">删除报价</string>
</resources>
