<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:myxmlns="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btn_bg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="48dp"
        android:padding="0dp"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingStart="0dp"
        android:theme="?attr/actionBarTheme"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_toLeftOf="@+id/textView4"
            android:layout_toStartOf="@+id/textView4"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/my_info"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </android.support.v7.widget.Toolbar>

    <!--<TextView-->
        <!--android:id="@+id/textView4"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="48dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:gravity="center"-->
        <!--android:background="@color/colorPrimary"-->
        <!--android:text="我的"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="18sp" />-->


    <RelativeLayout
        android:id="@+id/layout_me_top"
        android:clickable="true"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.idejie.android.aoc.fragment.utils.CircleImageView
            android:id="@+id/roundImageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/face"
            android:clickable="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:text="@string/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:id="@+id/tv_nickName"
            android:layout_toRightOf="@+id/roundImageView"
            android:layout_toEndOf="@+id/roundImageView"
            android:textSize="16sp" />

        <TextView
            android:text="积分: 0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_score"
            android:layout_marginTop="5dp"
            android:layout_alignLeft="@+id/tv_nickName"
            android:layout_alignStart="@+id/tv_nickName"
            android:layout_below="@+id/tv_nickName" />

        <TextView
            android:clickable="true"
            android:text="@string/login_logout_txt"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login"
            android:textColor="@color/colorPrimary"
            android:layout_alignWithParentIfMissing="false"
            android:layout_below="@+id/roundImageView"
            android:layout_alignLeft="@+id/roundImageView"
            android:layout_alignStart="@+id/roundImageView"
            android:layout_marginTop="5dp" />


    </RelativeLayout>


    <!--<LinearLayout-->
        <!--android:id="@+id/layout_me_second"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_below="@id/layout_me_top"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true">-->

            <TextView
                android:text="我的关注"
                android:background="@color/white"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_guanzhu"
                android:drawableLeft="@mipmap/icon_like"
                android:drawableStart="@mipmap/icon_like"
                android:drawablePadding="10dp"
                android:layout_marginTop="4dp"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                android:gravity="center_vertical" />

            <TextView
                android:text="@string/my_prices"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawablePadding="10dp"
                android:layout_marginTop="2dp"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:id="@+id/tv_price"
                android:drawableLeft="@mipmap/icon_price"
                android:drawableStart="@mipmap/icon_price"
                android:layout_gravity="center"
                android:gravity="center_vertical" />

            <TextView
                android:text="我的评论"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawablePadding="10dp"
                android:layout_marginTop="2dp"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:id="@+id/tv_comment"
                android:drawableLeft="@mipmap/icon_comment"
                android:drawableStart="@mipmap/icon_comment"
                android:layout_gravity="center"
                android:gravity="center_vertical" />

        <TextView
            android:text="查看商城"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawablePadding="10dp"
            android:layout_marginTop="4dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:id="@+id/tv_mall"
            android:drawableLeft="@mipmap/icon_mall"
            android:drawableStart="@mipmap/icon_mall"
            android:layout_gravity="center"
            android:gravity="center_vertical" />

        <TextView
            android:text="相关推广"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawablePadding="10dp"
            android:layout_marginTop="1dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:id="@+id/tv_app"
            android:drawableLeft="@mipmap/icon_app"
            android:drawableStart="@mipmap/icon_app"
            android:layout_gravity="center"
            android:gravity="center_vertical" />

        <TextView
            android:text="@string/settings"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:layout_marginTop="4dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:id="@+id/tv_set"
            android:drawableLeft="@mipmap/icon_set"
            android:drawableStart="@mipmap/icon_set"
            android:layout_gravity="center"
            android:gravity="center_vertical" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/logout_txt"
        android:textSize="24sp" />
    <!--</LinearLayout>-->


</LinearLayout>